# Muller-Brown-Potential

./: .gitignore  CLAUDE.md  README.md  benchmark.py  convergence_study.py  example.py  main.py  manage_artifacts.py  nnp.py  pyproject.toml  verify_langevin.py
.github/: copilot-instructions.md
src/muller_brown/: __init__.py  analysis.py  config.py  constants.py  data.py  io.py  potential.py  simulation.py  utils.py  visualization.py
tests/: conftest.py  test_api.py  test_config.py  test_data.py  test_integrator.py  test_io.py  test_muller_brown.py  test_potential.py  test_sampling.py  test_visualization.py
