[project]
name = "muller-brown"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib~=3.10",
    "numpy>=1.21,<2.0",
    "scipy>=1.15.3",
    "torch>=2.0,<2.1",
    "tqdm>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
