[project]
name = "muller-brown"
version = "0.1.0"
description = "Modern PyTorch implementation of the Müller-Brown potential energy surface with Langevin dynamics simulation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Hunter Heidenreich", email = "hunter.heidenreich@example.com"}
]
keywords = ["physics", "simulation", "molecular-dynamics", "pytorch", "scientific-computing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "h5py>=3.8.0",
    "matplotlib~=3.10",
    "numpy>=1.21,<2.0",
    "scipy>=1.15.3",
    "torch>=2.0,<2.1",
    "tqdm>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
]
